; ModuleID = '/home/carl/AnghaBench/macvim/src/extr_gui_photon.c_gui_mch_stop_blink.c'
source_filename = "/home/carl/AnghaBench/macvim/src/extr_gui_photon.c_gui_mch_stop_blink.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@gui_ph_timer_cursor = common dso_local global i32 0, align 4
@Pt_ARG_TIMER_INITIAL = common dso_local global i32 0, align 4
@blink_state = common dso_local global i64 0, align 8
@BLINK_OFF = common dso_local global i64 0, align 8
@TRUE = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@BLINK_NONE = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @gui_mch_stop_blink() #0 {
  %1 = load i32, i32* @gui_ph_timer_cursor, align 4
  %2 = load i32, i32* @Pt_ARG_TIMER_INITIAL, align 4
  %3 = call i32 @PtSetResource(i32 %1, i32 %2, i32 0, i32 0)
  %4 = load i64, i64* @blink_state, align 8
  %5 = load i64, i64* @BLINK_OFF, align 8
  %6 = icmp eq i64 %4, %5
  br i1 %6, label %7, label %11

7:                                                ; preds = %0
  %8 = load i32, i32* @TRUE, align 4
  %9 = load i32, i32* @FALSE, align 4
  %10 = call i32 @gui_update_cursor(i32 %8, i32 %9)
  br label %11

11:                                               ; preds = %7, %0
  %12 = load i64, i64* @BLINK_NONE, align 8
  store i64 %12, i64* @blink_state, align 8
  ret void
}

declare dso_local i32 @PtSetResource(i32, i32, i32, i32) #1

declare dso_local i32 @gui_update_cursor(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
